will the favicon show up in deployment

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -3,7 +3,7 @@
        xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HealthPointsFitness.us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
