--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,6 +21,8 @@
   <!--  //Chat stuff-->
   <link rel="stylesheet" href="/css/chat.css">
   <link href="/css/main.css" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico" type="image/ico">
+
 </th:block>
 
 </html>
