Got profile points working

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
 <th:block th:fragment="navbar">
     <nav class="navbar bg-body-tertiary sticky-top fixed">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img height="80px" src="/img/logo.gif">
             </a>
             <div class="dropdown ms-auto me-3" sec:authorize="isAuthenticated">
