--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="/css/chat.css">
   <link href="/css/main.css" rel="stylesheet">
   <link rel="icon" href="/favicon.ico" type="image/ico">
+  <link rel="icon" type="image/ico" th:href="@{../static/favicon.ico}">
+
 
 </th:block>
 
